White space fix

--- a/src/less/messages.less
+++ b/src/less/messages.less
@@ -42,7 +42,7 @@
         min-height: 35px;
         font-size: 17px;
         line-height: 1.2;
-    
+        word-break: break-word;
     }
     &.message-pic {
         .message-text {
